--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Move jars
-      run: mv out/*/*/*.jar .
+      run: cp out/*/*/*.jar .
     - run: git config --global user.email "k.chulakov97@gmail.com"
     - run: git config --global user.name "ulyanovskk"
     - run: git add server.jar
