--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -18,6 +18,7 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - name: Move jars
       run: cp out/*/*/*.jar .
+    - run: git pull
     - run: git config --global user.email "k.chulakov97@gmail.com"
     - run: git config --global user.name "ulyanovskk"
     - run: git add server.jar
