--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -16,9 +16,11 @@ jobs:
     - uses: webfactory/ssh-agent@v0.5.2
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - run: git pull
+    - name: Make shit commit
+      run: echo "\nThis was created AUTOMATICALLY." > README.md
     - name: Move jars
       run: cp out/*/*/*.jar .
-    - run: git pull
     - run: git config --global user.email "k.chulakov97@gmail.com"
     - run: git config --global user.name "ulyanovskk"
     - run: git add server.jar
