--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -18,11 +18,12 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
     - run: git pull
     - name: Make shit commit
-      run: echo "\nThis was created AUTOMATICALLY." > README.md
+      run: echo "\nThis was created AUTOMATICALLY." >> README.md
     - name: Move jars
       run: cp out/*/*/*.jar .
     - run: git config --global user.email "k.chulakov97@gmail.com"
     - run: git config --global user.name "ulyanovskk"
+    - run: git add README.md
     - run: git add server.jar
     - run: git add client.jar
     - run: git commit -m 'Moved jars'
