--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -21,8 +21,8 @@ jobs:
       run: echo "This was created AUTOMATICALLY." >> README.md
     - name: Move jars
       run: cp out/*/*/*.jar .
-    - run: git config --global user.email "k.chulakov97@gmail.com"
-    - run: git config --global user.name "ulyanovskk"
+    - run: git config --global user.email ${{ secrets.EMAIL }}
+    - run: git config --global user.name ${{ secrets.NAME }}
     - run: git add README.md
     - run: git add server.jar
     - run: git add client.jar
