--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -28,4 +28,12 @@ jobs:
     - run: git add client.jar
     - run: git commit -m 'Moved jars'
     - run: git push -u origin master
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: echo "UPDATED SUCCESSFULLY"
           
