--- a/.github/workflows/mv.yml
+++ b/.github/workflows/mv.yml
@@ -2,7 +2,7 @@ name: Move JARS
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, helios ]
   pull_request:
     branches: [ master ]
 
